# Qres

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_training_with_monitoring.sh  sequence.txt  test.ipynb  test_protein.txt
qres/: agent.py  buffer.py  config.py  data_handler.py  env.py  environment.py  eval.py  fold.py  logger.py  model.py  multi_train.py  plot.py  protein.py  single_train.py  structure_prediction.py  test_buffer.py  test_params.py  train.py  visualize.ipynb  workers.py
qres/data/: seqs_vis.json
qres/data/run_6/: model.pt
qres/data/run_8/: config.yaml
qres/data/run_overly-keen-whale/: config.yaml
qres/tests/: test_agent.py  test_structure_prediction.py
v1/: fold.py  main.py  model.py  protein.py  requirements.txt  test_protein.txt  train.py  verify.py
wandb/: latest-run
wandb/run-20241026_120444-4zlajbgm/: run-4zlajbgm.wandb
wandb/run-20241026_120444-4zlajbgm/files/: config.yaml  wandb-metadata.json
wandb/run-20241026_123614-5z4kl2fv/: run-5z4kl2fv.wandb
wandb/run-20241026_123614-5z4kl2fv/files/: config.yaml  wandb-metadata.json
wandb/run-20241026_123916-ibgus0fd/: run-ibgus0fd.wandb
wandb/run-20241026_123916-ibgus0fd/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20241026_135427-ihxhpkvq/: run-ihxhpkvq.wandb
wandb/run-20241026_135427-ihxhpkvq/files/: config.yaml  wandb-metadata.json
wandb/run-20241026_135515-w5kkw776/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20241026_135540-tsmuv81e/: run-tsmuv81e.wandb
(+1 files in other folders)
